--- a/.config/kde.org/UserFeedback.org.kde.plasmashell.conf
+++ b/.config/kde.org/UserFeedback.org.kde.plasmashell.conf
@@ -26,6 +26,6 @@ dataSourceCommonSettings\activeState=true
 dataSourceCommonSettings\activeState=true
 
 [UserFeedback]
-ApplicationStartCount=106
-ApplicationTime=353831
+ApplicationStartCount=153
+ApplicationTime=1641670
 LastEncouragement=@DateTime(\0\0\0\x10\0\0\0\0\0\0%\x86\xa7\x4\x9c\xe3\x13\0)
